# Node_Editor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: example_glfw_opengl3.cpp  main.cpp  node_editor_example.cpp
src/core/: ext_libs.h  pch.h
